# inventory_service_v2

./: .dockerignore  .env.docker  .env.example  .env.example_local  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 0aae228bdd35_init.py
app/: main.py
app/application/use_cases/: add_item_to_order.py
app/core/: app.py  config.py  database.py  dependencies.py  logger.py
app/domain/: entities.py  interfaces.py
app/infrastructure/: exceptions.py
app/infrastructure/database/: models.py  repositories.py
app/presentation/api/endpoints/: items.py  orders.py
app/presentation/api/v1/: router.py
app/presentation/api/v1/endpoints/: categories.py
scripts/: check_code.py  seed_data.py  test_scenario_no_jq.sh
tests/: conftest.py  test_scenario.sh
tests/test_application/: test_add_item_to_order.py
