[tool.poetry]
name = "inventory-service"
version = "0.1.0"
description = "Inventory management API with orders and categories"
authors = ["eduard <slobodyanik.ed@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.5.2"
loguru = "^0.7.3"
environs = "^14.2.0"
python-multipart = "^0.0.9"
redis = "^5.0.0"
websockets = "^12.0"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.28.0"
ruff = "^0.5.0"
black = "^24.0.0"
isort = "^5.13.0"
pre-commit = "^3.6.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88